[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "straws_package"
version = "0.0.1"
authors = [
  { name="Ben Povar", email="ben.povar@gmail.com" },
]
description = "Financial module."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License Version 2.0",
    "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib",
  "numpy", 
  "typing",
  "scipy"
]

[project.urls]
Homepage = "https://github.com/qiqvo/curves-and-all.git"